Fix général des cards - Ajout d'une la version tablette/mobile - Fix de la taille en mode mobile du conteneur - Utilisation de variables globales pour les fonts

--- a/src/assets/css/Card.scss
+++ b/src/assets/css/Card.scss
@@ -1,10 +1,13 @@
-$padding: 10%;
+@use 'mixins' as *;
+
+$padding: 0;
 
 /* Individual appartment Cards */
 .card-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    place-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    // grid-template-columns: repeat(3, 1fr);
+    // place-content: center;
     background-color: var(--card-bg-color);
     border-radius: 25px;
     padding: 50px;
@@ -21,17 +24,28 @@ $padding: 10%;
         figcaption {
             position: absolute;
             bottom: $padding;
-            left: $padding;
-            font-size: 18px;
-            font-weight: 700;
+            font-size: var(--fs-regular);
+            font-weight: var(--font-weight-large);
             color: white;
             background-color: rgba(0, 0, 0, 0.507);
             padding: 5px;
-            max-width: calc(100% - ($padding * 2));
+            width: 100%;
+            height: 70px;
         }
 
         &:hover {
             transform: scale(1.02);
+        }
+    }
+
+    @include for-size(tablet) {
+        padding: unset;
+        background-color: unset;
+        grid-template-rows: 225px;
+
+        .card {
+            width: 100%;
+            max-height: 225px;
         }
     }
 }
